--- a/Projects/[WEEK 3] HTML FINAL PROJECT/style.css
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/style.css
@@ -60,6 +60,10 @@ h1 {
     margin-top: 40px;
 }
 
+.my-skills:hover{
+    border: 15px solid rgb(51, 51, 139);
+}
+
 img {
     border-radius: 20px;
 }
@@ -72,6 +76,10 @@ img {
     border: 5px solid black;
     border-radius: 10px;
     margin-top: 50px;
+}
+
+.projects:hover{
+    border: 10px solid black;
 }
 
 a:visited {
@@ -88,6 +96,7 @@ a {
     border: 2px solid black;
     border-radius: 5px;
     padding: 10px;
+    text-decoration: none;
 }
 
 .a-position{
@@ -96,14 +105,13 @@ a {
 }
 
 table {
-    background-color: rgb(70, 67, 67);
-    border: 0px solid bisque;
-    color: blanchedalmond;
+    background-color: rgb(255, 0, 0,0.8);
+    border: 0px solid rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
     border-collapse: collapse;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto;
+    text-align: center;
+    font-family: halloweek;
    
 }
 
@@ -115,6 +123,10 @@ table {
     border: 10px solid rgb(117, 43, 43);
     border-radius: 10px;
     margin-top: 30px;
+}
+
+.education:hover{
+    border: 15px solid rgb(117, 43, 43);
 }
 
 
