--- a/Projects/[WEEK 3] HTML FINAL PROJECT/style2.css
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/style2.css
@@ -33,57 +33,69 @@ body {
     margin: 1em 10% 0 10%;
 }
 
-h1{
+.h1{
+    color: orangered;
+}
+
+
+h1 {
     font-family: halloweek;
-    color: red;
+    color: rgb(197, 10, 10);
 }
 
 a {
     background-color: blanchedalmond;
     margin: 0px;
-    margin-left: auto; 
+    margin-left: auto;
     border: 2px solid black;
     border-radius: 5px;
     padding: 10px;
     color: red;
     font-family: ghost;
     text-decoration: none;
-    
+    display: inline;
+
 }
 
-.project1{
+li{
+    display: inline;
+}
+
+.project1 {
     background-color: beige;
     border: 10px solid rgb(255, 110, 110);
     border-radius: 10px;
     text-align: top;
     font-family: scarry;
 }
-.project1:hover{
-background-color: rgb(237, 103, 103);
-border: 10px solid rgb(238, 57, 57);
+
+.project1:hover {
+    background-color: rgb(255, 179, 179);
+    border: 10px solid rgb(238, 57, 57);
 
 }
-.a-position{
-    position:relative;
+
+.a-position {
+    position: relative;
     top: -15px;
 }
 
-img{
+img {
     border-radius: 15px;
     border: 2px solid black;
     text-shadow: 2px 2px;
 }
 
 
-.p-style{
+.p-style {
     font-family: fig;
     font-size: xx-large;
 }
 
 
-.project2{ 
-    background-color: rgb(44, 21, 222);
-    border: 10px solid rgb(79, 22, 106);
+.project2 {
+    background-color: rgb(97, 20, 168);
+    border: 10px solid rgb(0, 0, 0);
     border-radius: 10px;
     text-align: top;
     font-family: scarry;
@@ -91,19 +103,25 @@ img{
 
 }
 
-.project2:hover{
-    background-color: rgb(230, 0, 251);
-border: 10px solid rgb(57, 156, 238);
+.project2:hover {
+    background-color: rgb(68, 43, 81);
+    border: 10px solid rgb(0, 0, 0);
 
 }
 
-.project3{ 
+.project3 {
     background-color: rgb(0, 0, 0);
     border: 10px solid rgb(220, 106, 0);
     border-radius: 10px;
     text-align: top;
     font-family: scarry;
     margin-top: 50px;
-    color: orange;
+    color: orangered;
+
+}
+
+footer {
+    font-family: ghost;
+    color: beige;
 
 }
