--- a/Projects/CSS Final Project/2.css
+++ b/Projects/CSS Final Project/2.css
@@ -101,6 +101,7 @@ hr {
     align-items: center;
     justify-content: center;
     text-align: center;
+    
 
 }
 
@@ -119,6 +120,7 @@ input[type="text"] {
 .more-icon {
     display: flex;
     justify-content: right;
+    margin-left: auto;
 }
 
 .together {
