--- a/Projects/CSS Final Project/2.css
+++ b/Projects/CSS Final Project/2.css
@@ -1,6 +1,7 @@
 * {
-    font-weight: 100;
+    font-weight: 200;
     box-sizing: border-box;
+
 }
 
 @media(max-width:1000px) {
@@ -23,7 +24,7 @@
         grid-template-columns: 1fr;
     }
 
-    .leftContainer {
+    .sidebar {
         display: none;
     }
 
@@ -39,7 +40,7 @@
         margin: 1rem;
     }
 
-    .mapAndTable {
+    .mapAndTable{
         display: flex;
         flex-direction: column;
     }
@@ -56,6 +57,13 @@
     }
 }
 
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    src: url(https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmSU5fCRc4EsA.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+  }
 body {
     margin: 0;
     display: grid;
@@ -63,7 +71,7 @@ body {
     height: 100vh;
     background-color: rgb(204, 204, 204);
 
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     gap: 1em;
 }
 
@@ -212,6 +220,7 @@ input[type="text"] {
 .glob-h1 {
     display: flex;
     flex-direction: row;
+    gap: 2em;
 }
 
 .table {
@@ -336,7 +345,7 @@ h2 {
 }
 
 .listingCardImage {
-    width: 100%;
+    width: 90%;
     border-radius: 5px;
     transition: transform .2s ease-in;
 
@@ -403,7 +412,7 @@ h2 {
 
 td {
     border: none;
-    border-bottom: 2px solid grey;
+
 }
 
 main {
@@ -422,6 +431,8 @@ main {
     display: flex;
     justify-content: space-between;
     padding: 1rem;
+    position: relative;
+    top: -2;
 }
 
 .card {
@@ -444,7 +455,9 @@ main {
     border-radius: 5px;
     display: flex;
     position: relative;
-    margin-top: -1.5rem;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -514,7 +527,7 @@ input[type="text"] {
     border: none;
     border-bottom: 3px solid gray;
     outline: none;
-    background-color: rgb(204, 204, 204);
+    background: none;
 }
 
 
@@ -548,14 +561,15 @@ input:focus {
 .globe {
     background-color: rgb(14, 125, 169);
 }
+
 .globalImg {
     background-color: green;
     color: white;
-    padding: 2rem;
+    padding: 2.5rem;
     border-radius: 5px;
     display: flex;
     position: relative;
-    margin-top: -6rem;
+    margin-top: -2rem;
 }
 
 .searchIcons {
@@ -641,3 +655,16 @@ input:focus {
     justify-content: space-between;
     gap: 0.5rem;
 }
+
+
+    .listCardText{
+        display: flex;
+        text-align: right;
+        align-items: column;
+
+    }
+
+    p{
+        margin: 2em;
+    }
+    
